Fix spacing issue for the last time on areas cards

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -4,11 +4,11 @@
   border-radius: 15px;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 2%;
   padding: 1% 0 0 0;
   text-align: center;
-  width: 35%;
+  width: 40%;
 }
 
 .area-image {
@@ -20,19 +20,18 @@
 
 .area-text {
   height: 15%;
-  margin: 2% 1% 0 1%;
-  object-fit: fill;
+  margin: 2% 2% 0 2%;
 }
 
 .area-header-text {
-  margin: 0 0 2% 0;
+  margin: 0 0 4% 0;
 }
 
 .area-header-container {
-  height: 10%;
+  height: 15%;
   object-fit: fill;
 }
 
 .area-button {
-  margin-bottom: 3%;
+  margin: 3% 0;
 }
